[package]
name = "devicectrl-input"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
evdev = { version = "0.13.2", features = ["tokio"] }
futures = "0.3.31"
devicectrl-common = { git = "https://github.com/MatthewCash/devicectrl-common", features = [
    "tokio",
] }
log = "0.4.28"
notify = "8.2.0"
sd-notify = "0.4.5"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
socket2 = "0.6.0"
